// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/query-bar/components/ColumnButton render should render ColumnButton default state when menu is closed 1`] = `
<Flyout
  className="query-bar-column-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-right"
>
  <Button
    className="query-bar-button"
    isDisabled={true}
    onClick={[Function]}
    type="button"
  >
    <MenuToggle>
      <IconMetadataColumns />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Columns"
          id="boxui.queryBar.columnsButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <div />
  </Overlay>
</Flyout>
`;

exports[`features/query-bar/components/ColumnButton render should render ColumnButton default state when menu is open 1`] = `
<Flyout
  className="query-bar-column-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-right"
>
  <Button
    className="query-bar-button"
    isDisabled={true}
    onClick={[Function]}
    type="button"
  >
    <MenuToggle>
      <IconMetadataColumns />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Columns"
          id="boxui.queryBar.columnsButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <ColumnButtonOverlay
      columns={
        Array [
          Object {
            "displayName": "Hullo Thar",
            "id": "1",
            "isShown": true,
            "options": null,
            "property": "name",
            "source": "item",
            "type": "string",
          },
          Object {
            "displayName": "Last Updated",
            "id": "2",
            "isShown": true,
            "options": null,
            "property": "lastUpdatedByName",
            "source": "item",
            "type": "date",
          },
          Object {
            "displayName": "Contract Value",
            "id": "3",
            "isShown": true,
            "options": Array [
              Object {
                "id": "",
                "key": "$100",
              },
            ],
            "property": "contractValue",
            "source": "metadata",
            "type": "enum",
          },
        ]
      }
      onColumnChange={[MockFunction]}
    />
  </Overlay>
</Flyout>
`;

exports[`features/query-bar/components/ColumnButton render should render ColumnButton with template passed in 1`] = `
<Flyout
  className="query-bar-column-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-right"
>
  <Button
    className="query-bar-button"
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    <MenuToggle>
      <IconMetadataColumns />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Columns"
          id="boxui.queryBar.columnsButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <div />
  </Overlay>
</Flyout>
`;
